test/tests/stages/6_statements_and_conditional_expressions/valid/extra_credit/unused_label.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[12]:
  int
  identifier(main)
  (
  void
  )
  {
  identifier(unused)
  :
  return
  const int(0)
  ;
  }
