test/tests/stages/6_statements_and_conditional_expressions/invalid_parse/extra_credit/kw_label.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[12]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  :
  return
  const int(0)
  ;
  }
